[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/PlayerHUD/StaminaContainer/art/stamina_container.png" type="Texture" id=1]
[ext_resource path="res://PlayerHUD/StaminaContainer/StaminaContainerLight.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerHUD/StaminaContainer/stamina_container.gd" type="Script" id=3]

[node name="StaminaContainer" type="TextureRect"]
margin_right = 26.0
margin_bottom = 66.0
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="StaminaContainerLight2" parent="." instance=ExtResource( 2 )]
margin_left = -3.0
margin_top = -3.0
margin_right = 29.0
margin_bottom = 29.0

[node name="StaminaContainerLight1" parent="." instance=ExtResource( 2 )]
margin_left = -3.0
margin_top = 17.0
margin_right = 29.0
margin_bottom = 49.0

[node name="StaminaContainerLight0" parent="." instance=ExtResource( 2 )]
margin_left = -3.0
margin_top = 37.0
margin_right = 29.0
margin_bottom = 69.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 26, 66 )
bus = "Sound"
